--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,9 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-redux": "^7.2.3",
+    "react-test-renderer": "17.0.1",
+    "redux": "^4.0.5"
   },
   "jest": {
     "preset": "react-native"
