--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "SmartOutlet",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "react-native": "0.64.0",
     "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-push-notification": "^7.2.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "2.0.0",
     "react-native-vector-icons": "^8.1.0",
