--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,8 @@
     "react-native-push-notification": "^7.2.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "2.0.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4"
   },
