--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.1",
+    "@react-native-picker/picker": "^1.15.0",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "react": "17.0.1",
     "react-is": "^17.0.2",
     "react-native": "0.64.0",
     "react-native-bluetooth-serial": "^1.0.0-rc1",
+    "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-multi-selectbox": "^1.5.0",
+    "react-native-paper": "^4.8.1",
     "react-native-push-notification": "^7.2.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "2.0.0",
+    "react-native-screens": "^3.1.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.1.0",
